--- a/app/src/App.css
+++ b/app/src/App.css
@@ -187,8 +187,53 @@
   background-position: center;
 }
 
+.film-hero .image {
+  min-height: 600px;
+  background-size: 100% 100%;
+}
+
+.film-details .details .breadcrumbs {
+  display: flex;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  font-size: 13px;
+}
+
+.film-details .details .breadcrumbs li {
+  margin-right: 10px;
+  list-style: none;
+}
+
+.film-details .details .breadcrumbs li span {
+  margin-bottom: 0;
+}
+
+.film-details .details .breadcrumbs li a {
+  font-weight: 600;
+  color: #346fbf;
+  text-decoration: none;
+}
+
+.film-details .details {
+  margin: 0 auto;
+  padding: 0 20px;
+  margin: 100px 50px;
+}
+
+.film-details .details span {
+  display: block;
+  margin-bottom: 5px;
+  font-size: 13px;
+}
+
+.film-details .details p {
+  line-height: 1.5;
+  font-size: 18px;
+}
+
 .app-footer {
-  padding: 40px 20px;
+  padding: 20px;
   background: #346fbf;
 }
 
